fix: source control button cut off (#5091)

--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -45,6 +45,7 @@
   color: #c5c5c5;
   background: transparent;
   cursor: pointer;
+  padding: 0;
 }
 
 .SourceControlButton[disabled] {
